# GMSSLDemo

./: DER编码证书.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wzw/gmssldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/gmssl/include/gmssl/: sm4.h
app/src/main/cpp/gmssl/src/: aead.c  sm2_alg.c  sm4_modes.c  sm9_alg.c  tlcp.c
app/src/main/cpp/log/: log.cpp  log.h
app/src/main/cpp/util/: utils.cpp  utils.h
app/src/main/java/com/wzw/gmssldemo/: Convection.java  MainActivity.java  Util.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wzw/gmssldemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
